_sass/yat/_layout.scss
/* ... */
/**
 * Site header
 */
.site-header {
  background-color: $header-background-color;
  height: $header-height;
  width: 100%;
  transition: height 0.2s, text-shadow 0.2s, top 0.2s;
  box-shadow: 0 1px 0 0 rgba(0, 0, 0, .06);

  // Positioning context for the mobile navigation icon
  @include flex-sticky(0);
  z-index: 1000;

  & > .wrapper {
    margin: 0 60px;
    padding: 0;
    max-width: 100%;
    transition: 0.2s margin;

    @include media-query(1024px) {
      margin: 0 20px;
      max-width: unset;
    }
  }

  a {
    text-decoration: none;
  }

  .site-header-inner {
    position: relative;
  }
}

.site-brand {
  line-height: $header-height;
  margin-right: 50px;

  .site-brand-inner {
    @include relative-font-size(1.125);
    font-weight: $base-font-weight;
    letter-spacing: -1px;
    transition: 0.1s filter color;

    &, &:visited {
      color: $header-text-color;
    }

    .site-favicon {
      display: inline-block;
      height: $header-height / 1.5;
      margin-right: 5px;
    }
  }
}

.site-nav {
  @include relative-font-size(1.125);
  line-height: $header-height;
  position: absolute;
  right: 0;
  top: 0;

  .nav-trigger {
    display: none;
  }

  .menu-icon {
    display: none;
  }

  .page-link {
    line-height: $base-line-height;
    color: $header-text-color;
    transition: 0.1s ease-in-out;

    // Gaps between nav items, but not on the last one
    &:not(:last-child) {
      margin-right: 24px;
      &:hover {
        text-decoration: underline;
      }
    }
  }

  @include media-query($on-laptop) {
    position: absolute;
    top: 0;
    text-align: left;

    label[for="nav-trigger"] {
      display: block;
      z-index: 2;
      cursor: pointer;
    }

    .menu-icon {
      display: block;
      float: right;
      text-align: center;

      > svg {
        fill: rgba($header-text-color, 80%);
        transition: 0.1s fill;
      }
    }

    input ~ .trigger {
      clear: both;
      display: none;
      border-radius: 3px;
      box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, .06);
    }

    input:checked ~ .trigger {
      display: block;
      background: $header-background-color;
    }

    .page-link {
      display: block;
      padding: 5px 10px;
      color: rgba($header-text-color, 80%);
      margin: 0 25px;
    }
  }
}

/**
 * Site footer
 */
.site-footer {
  @include relative-font-size(1.0);
  color: $footer-text-color;
  background-color: $footer-background-color;
  text-align: left;
  transition: background-color 0.2s;

  .site-footer-inner {
    transition: border-top 0.2s;
    padding: $spacing-unit * 1.8 0;
  }

  a {
    $a-color: $brand-color;
    color: $a-color;

    &:hover {
      color: lighten($a-color, 10%);
    }
  }
}

.copyleft {
  display: inline-block;
  transform: rotate(180deg);
}

/**
 * Post header
 */
%post-header {
  .post-header {
    margin-bottom: $spacing-unit;
  }

  .post-title {
    @include relative-font-size(2.625);
    letter-spacing: -1px;
    line-height: 1;

    @include media-query($on-laptop) {
      @include relative-font-size(2.25);
    }
  }

  .post-tags {
    padding-right: 150px;

    .post-tag {
      display: inline-block;
      margin: 0 12px 0 0;
    }
  }
}

/**
 * Page content
 */
.page-content {
  @extend %flex-1; /* <-- Keep footer on the bottom */
  -ms-flex: none; /* <-- Fix IE footer issue */
  padding: $spacing-unit * 2 0;
  padding-top: 72px;
}

.page-heading {
  @include relative-font-size(2);
}

.post-list-heading {
  @include relative-font-size(1.75);
}
/* ... */

